# arc-icon-theme

./: Makefile.am  README.md
Arc-Gruvbox/: index.theme
src/: render_icons.sh
